--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-pager": "^1.3.3",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1"
   },
