--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-pager": "^1.3.3",
+    "react-paginate": "^5.2.3",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1"
   },
