--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "google-maps": "^3.3.0",
+    "google-maps-react": "^2.0.2",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -19,5 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "google-maps": "^3.2.1"
   }
 }
